--- a/index.html
+++ b/index.html
@@ -5,102 +5,56 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/MakeDiv.css">
-  <link rel="stylesheet" href="./css/MakeImg.css">
-  <link rel="stylesheet" href="./css/UploadImage.css">
+  <link rel="stylesheet" href="src/css/reset.css">
+  <link rel="stylesheet" href="src/css/MakeDiv.css">
+  <link rel="stylesheet" href="src/css/MakeImg.css">
+  <link rel="stylesheet" href="src/css/MakeImgDiv.css">
+  <link rel="stylesheet" href="src/css/UploadImage.css">
+  <link rel="stylesheet" href="src/css/MakeInput.css">
 </head>
 
 <body>
   <article class="container">
-    <form class="image-form" method="post" action="/upload">
+    <form class="image-form" action="/upload">
       <div class="image-content">
-        <div class="image-content__upload">
-          <div class="image-content__box">
-            <label for="image-content__input" class="image-content__label">드래그하거나 클릭하여 업로드
+
+        <div class="image-content__preview">
+          <!-- <p class="image-content__init">게시 한 사진 미리보기</p> -->
+        </div>
+
+        <div class="image-upload__gps">
+          <input type="text" list="address" id="image-upload__input" name="image-content__input" class="image-upload__input" placeholder="사진 촬영 장소">
+          <datalist id="address" class="image-content__datalist"></datalist>
+          <p class="event-test"></p>
+        </div>
+        
+        <div class="image-content__completeBox">✅ 사진 업로드 완료</div>
+        
+        <label class="image-content__label" for="image-content__input">
+          <div class="image-content__inner">
+            <div class="image-content__text">드래그하거나 클릭하여 업로드
               <input type="file" id="image-content__input" name="image-content__input" class="image-content__input"
                 accept="img/*" required multiple>
-            </label>
-          </div>
+              </div>
+            </div>
+        </label>
 
-          <img id="myImg" src="./static/jeju2.jpg">
-          <div class="image-content__preview">
-          </div>
-        </div>
         <div class="image-content__info">
-          <p><input type="text" name="image-content__title" class="image-content__title" placeholder="제목"></p>
+          <p><input type="text" name="image-content__title" class="image-content__title" placeholder="게시글 제목"></p>
           <p><textarea maxlength="100" name="image-content__desc" class="image-content__desc"
-              placeholder="설명"></textarea>
-          </p>
+              placeholder="게시글 설명(100자 이내)"></textarea></p>
         </div>
+
+
       </div>
-      <button class="image-content__submit">제출</button>
+
+      <!-- <input type="submit"> -->
+      <button type="submit" class="image-content__submit">제출</button>
     </form>
   </article>
-  <script src="vendors/exif-js/exif-js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/exif-js"></script>
-  <script>
-    const img = document.querySelector("#myImg");
-    img.addEventListener("load", function () {
-      EXIF.getData(img, function () {
-        const allMetaData = EXIF.getAllTags(this);
-        const GPSLongitude = EXIF.getTag(this, "GPSLongitude");
-        console.log(allMetaData, GPSLongitude, this.exifdata)
-      })
-    })
-
-    const inputBoxEl = document.querySelector(".image-content__label");
-    inputBoxEl.addEventListener("change", function (event) {
-      PreviewImage(event);
-    });
-
-    function PreviewImage(e) {
-      const filesInfo = e.target.files;
-      const fileList = [...filesInfo];
-      const previewZone = document.querySelector(".image-content__preview");
-
-      if (filesInfo.length > 4) {
-        alert("사진은 4장까지 올릴 수 있습니다.");
-        return;
-      }
-
-      fileList.map((file) => {
-        const reader = new FileReader();
-        reader.addEventListener('load', function (e) {
-          const img = MakeImg(e);
-          const div = MakeDiv(img, file);
-          previewZone.appendChild(div);
-        });
-        reader.readAsDataURL(file);
-      });
-    }
-
-    function MakeImg(e) {
-      const img = document.createElement("img");
-      img.classList.add("imgStyle");
-      img.src = e.target.result;
-      return getExifData(img);
-    }
-
-    function getExifData(img) {
-      img.addEventListener("load", function () {
-        EXIF.getData(this, function () {
-          const allMetaData = EXIF.getAllTags(this);
-          const GPSLongitude = EXIF.getTag(this, "GPSLongitude");
-          console.log(allMetaData, GPSLongitude)
-        })
-      })
-      return img;
-    }
-
-    function MakeDiv(img) {
-      const div = document.createElement("div");
-      div.classList.add("divStyle");
-      div.appendChild(img);
-      return div;
-    }
-
-  </script>
+  <script src="./src/js/index.js"></script>
 </body>
 
 </html>
