--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               type="text"
               list="address"
               id="image-upload__input"
-              name="image-content__input"
+              name="image-upload__input"
               class="image-upload__input"
               placeholder="사진 촬영 장소"
             />
@@ -78,10 +78,10 @@
     </article>
 
     <script src="https://cdn.jsdelivr.net/npm/exif-js"></script>
-    <script
+    <!-- <script
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=0602e9988471965e96177d8d36f06db0&libraries=services"
-    ></script>
+    ></script> -->
     <script src="./src/js/index.js"></script>
   </body>
 </html>
